2012-05-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/chunks.cc: Changed ints->bools.
	* objs/objs.cc: Fixed memory leak caused by non-deletion of terrain game
	  objects on cache-out.

2012-04-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Keyring: Merged in the rollable carpet mod.
	* SI Fixes: Ankh-less ship sails since there is little reason for the locals
	  to add one of the symbols of Beast British's tyrannical commands.

2011-12-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* all: Fixing several edge cases in world wrapping.

2011-12-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult_intrinsics.txt: Updated with new intrinsics create_barge_object and
	  and in_usecode_path. Also documented optional parameters to the following
	  intrinsics: path_run_usecode, move_object, recall_virtue_stone and
	  teleport_to_saved_pos.
	* usecode/intrinsics.cc, usecode/bgintrinsics.h, usecode/siintrinsics.h,
	  ucinternal.h: Added create_barge_object and in_usecode_path intrinsics.
	  Added a new and optional parameter to path_run_usecode that can toggle SI
	  mode (defaults to true in SI, false otherwise).
	* objs/barge.cc: Force a barge to reset its center as well as to gather its
	  objects when it is being moved into the game world. Also, force a reset of
	  the barge's center when moving it. Fixed long-standing bug (at least 10
	  years old) that allowed a flying carpet to land on water.
	* imagewin/imagewin.cc: Initialization order (removing warning).
	* mapedit/shapeedit.cc: Fixed insertion bugs on vector data, as well as
	  allocation with new/dealocation with gtk_tree_iter_free.
	* objs/chunks.cc: Invalid world-wrapping caused assertions to fail at the
	  edges of the world.
	* all others: Replaced pre-processor hackery for Game_Object::find_nearby*
	  with templates and added a few more overloads.

2011-12-01 Dominik Reichardt <dominus@users.sourceforge.net>
	* gamewin.*, gumps/misc_options.*: applied patch by i30817 (forum) for